# fastapi-ddd-hotels

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  setup.cfg
app/application/contracts/: __init__.py
app/application/contracts/authentication/: authentication_response.py  register_request.py
app/application/contracts/bookings/: booking_response.py  (+1 more)
app/application/protocols/: __init__.py  date_time.py  interactor.py  jwt_processor.py  password_hasher.py  unitofwork.py
app/domain/bookings/: entity.py  errors.py  repository.py
app/domain/common/: entity.py  errors.py  repository.py  value_object.py
app/domain/hotels/: entity.py  errors.py  repository.py
app/domain/rooms/: entity.py  errors.py  repository.py
app/domain/users/: entity.py  errors.py  repository.py
app/infrastructure/: database_config.py  date_time_provider.py  ioc.py  settings.py
app/infrastructure/admin/: bookings.py  hotels.py  rooms.py  users.py
app/infrastructure/authentication/: jwt_processor.py  jwt_settings.py  permissions.py
app/infrastructure/di/: main.py
app/infrastructure/persistance/: database.py  unitofwork.py
app/infrastructure/persistence/: database_config.py  redis_config.py  unitofwork.py
app/infrastructure/security/: password_hasher.py
app/migrations/: env.py
app/migrations/versions/: 456394beebbb_init.py
app/web_api/: entrypoint.py  exc_handlers.py
app/web_api/router/: hotels.py
app/web_api/schemas/: bookings.py  hotels.py  rooms.py
(+53 files in other folders)
